[package]
name = "druid-video"
version = "0.1.0"
authors = ["Justin Moon <mail@justinmoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# druid = { git = "https://github.com/linebender/druid.git" }
druid = { version = "0.6", features = ["image"] }
eye = { git = "https://github.com/raymanfx/eye-rs", default-features = false, features = ["openpnp"], rev = "293b154f" }
ffimage = "^0.8"
image = "0.23.10"
bardecoder = { git = "https://github.com/piderman314/bardecoder" }
